feat: add JWT role extraction and remember-me token expiration